# tiodb

./: .gitignore  CMakeLists.txt  README.md  bootstrap.bat  tiodb.sln  tiodb_config.h.in
TioTest/: Program.cs  TioTest.csproj
client/c/: CMakeLists.txt  test_tioclient.c  tioclient.c  tioclient.def  tioclient.h  tioclient_internals.h  tioclientdll.vcxproj  tioerr.h  tioplugin.h
client/cpp/: tioclient.hpp
client/mobile/: IASL.sln
client/mobile/IASL/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  IASL.csproj
client/mobile/IASL.Android/: IASL.Android.csproj  MainActivity.cs
client/mobile/IASL.Android/Properties/: AndroidManifest.xml  AssemblyInfo.cs
client/mobile/IASL.iOS/: AppDelegate.cs  IASL.iOS.csproj  Info.plist  Main.cs
client/mobile/IASL.iOS/Properties/: AssemblyInfo.cs
client/mobile/IASL/Models/: Stock.cs
client/mobile/IASL/Services/: IDataStore.cs  MockDataStore.cs  Timer.cs
client/mobile/IASL/ViewModels/: AboutViewModel.cs  BaseViewModel.cs  StockDetailViewModel.cs  StocksViewModel.cs
client/mobile/IASL/Views/: AboutPage.xaml  AboutPage.xaml.cs  NewStockPage.xaml  NewStockPage.xaml.cs  StockDetailPage.xaml  StockDetailPage.xaml.cs  StockPage.xaml  StockPage.xaml.cs
client/python/: tioclient.py
madrinha/: CMakeLists.txt  madrinha.h  madrinha.rc  main.cpp
server/tio/: BinaryProtocolLogger.h  CMakeLists.txt  Command.cpp  Command.h  Container.h  ContainerManager.cpp  ContainerManager.h  FileSystemStorage.h  HttpParser.h  ListStorage.h  LogDbStorage.h  MapStorage.h  TioPython.cpp  TioTcpClient.h  TioTcpProtocol.h  TioTcpServer.cpp  TioTcpServer.h  TioTcpSession.cpp  TioTcpSession.h  VectorStorage.h  logdb.h  pch.h  tio.cpp  tio.h  tio.rc  tio_config.h.in  tiomutex.cpp  tiomutex.h  tioserver.vcxproj
tests/tiobench/: CMakeLists.txt  README.md  pch.h  tiobench.cpp  tiobench.rc  tiobench.vcxproj  tioclientcli.c
tests/tiobench/test/: __main__.py
tests/unittest/: CMakeLists.txt  madrinha_unittest.cpp  template_lib.cpp  template_lib.h  template_unittest.cpp  tioclient_mock.c  tioclient_mock.h  tioclient_unittest.cpp
tools/TioExplorer/Properties/: AssemblyInfo.cs
tools/TioLogReplayCpp/: CMakeLists.txt  README.md  tiologreplay.cpp  tiologreplay.rc  tiologreplayconfig.h.in
tools/csharp/tiologreplay/: .gitignore
tools/tiologreplay/: .gitignore  build.bat  file_version_info.txt  setup.py  tiologreplay.py
